[package]
name = "pine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# error[E0277]: the trait bound `anchor_spl::token::TokenAccount: Discriminator` is not satisfied

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
